<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_semibold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_category"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <include
            layout="@layout/card_category"
            android:id="@+id/card_organik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <include
            layout="@layout/card_category"
            android:id="@+id/card_anorganik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"/>

        <include
            layout="@layout/card_category"
            android:id="@+id/card_b3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/header_list"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:background="@drawable/bg_input"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            android:hint="@string/search"
            android:autofillHints="name"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_filter"/>

        <ImageButton
            android:id="@+id/button_filter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_description_button"
            android:padding="10dp"
            android:background="@drawable/bg_input"
            android:scaleType="centerInside"
            android:src="@drawable/ic_funnel"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"/>

</LinearLayout>