<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:src="@drawable/ic_arrow_left"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:paddingHorizontal="16dp"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_medium"
        android:text="Organik"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:text="Sampah organik adalah jenis sampah yang berasal dari makhluk hidup dan dapat terurai secara alami (biodegradable) oleh mikroorganisme."
        android:textSize="16sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_card_info">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_scan_search"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_characteristic"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_card_info">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_sprout"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/header_benefit"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

        <ListView
            android:id="@+id/list_benefit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp"
            android:text="@string/header_example"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_medium"/>

        <GridView
            android:id="@+id/waste_example_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:numColumns="2"
            android:verticalSpacing="16dp"
            android:horizontalSpacing="16dp"
            android:clipToPadding="false"/>

    </LinearLayout>

</LinearLayout>